Fix vertical overflow on modal

--- a/packages/ndla-ui/src/modal/component.modal.scss
+++ b/packages/ndla-ui/src/modal/component.modal.scss
@@ -26,6 +26,7 @@
   z-index: 1000;
   will-change: opacity;
   background: rgba(0, 0, 0, 0.7) !important;
+  overflow-y: auto;height: 100%;
   &--after-open {
     opacity: 1;
   }
@@ -38,14 +39,13 @@
   background: transparent !important;
   border: none !important;
   max-width: 800px;
-  height: 100%;
   margin: auto;
   background: $white;
   left: 0 !important;
   top: 0 !important;
   right: 0 !important;
   bottom: auto !important;
-  overflow-y: auto;
+
   &--after-open {
     transform:scale(1);
   }
